--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,28 @@ body {
   font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;  
   
 }
+
+/* App.css */
+body, html, #root {
+  margin: 0;
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+.section {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.first {
+  background: linear-gradient(45deg, #f9f9f9, #e0e0e0);
+}
+
+
+
+.canvas-container {
+  width: 100%;
+  height: 100vh;
+}
