--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,6 @@
 @import "tailwindcss";
 
-
 body {
-  background: var(--background);
-  color: var(--foreground);
   font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;  
   
 }
@@ -15,20 +12,96 @@ body, html, #root {
   scroll-behavior: smooth;
 }
 
-.section {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
-.first {
-  background: linear-gradient(45deg, #f9f9f9, #e0e0e0);
+.session-height {
+  padding-top: 56px;
 }
 
 
+@layer utilities {
+  /* Background */
+  .bg-background {
+    background-color: #ffffff;
+  }
+  .dark .bg-background {
+    background-color: #061b1f;
+  }
 
-.canvas-container {
-  width: 100%;
-  height: 100vh;
+  /* Text Primary */
+  .text-primary {
+    color: #b81515;
+  }
+  .dark .text-primary {
+    color: #ffffff;
+  }
+
+  /* Text Secondary */
+  .text-secondary {
+    color: #9b9b9b;
+  }
+  .dark .text-secondary {
+    color: #707070;
+  }
+
+  /* Text Muted */
+  .text-muted {
+    color: #6d6d6d;
+  }
+  .dark .text-muted {
+    color: #cecece;
+  }
+
+  /* Accent */
+  .text-accent {
+    color: #00eeff;
+  }
+
+  /* Hover variants */
+
+  .hover\:bg-background:hover {
+    background-color: #f3f3f3; /* slightly off white for hover */
+  }
+  .dark .hover\:bg-background:hover {
+    background-color: #1a1a1a;
+  }
+
+  .hover\:text-primary:hover {
+    color: #333333;
+  }
+  .dark .hover\:text-primary:hover {
+    color: #dddddd;
+  }
+
+  .hover\:text-secondary:hover {
+    color: #7d7d7d;
+  }
+  .dark .hover\:text-secondary:hover {
+    color: #808080;
+  }
+
+  .hover\:text-muted:hover {
+    color: #5a5a5a;
+  }
+  .dark .hover\:text-muted:hover {
+    color: #d9d9d9;
+  }
+
+  .hover\:text-accent:hover {
+    color: #00bbcc;
+  }
+}
+@keyframes borderPulse {
+  0% {
+    box-shadow: 0 0 35px 10px rgba(0, 238, 255, 0.4);
+  }
+  50% {
+    box-shadow: 0 0 45px 15px rgba(155, 155, 155, 0.5);
+  }
+  100% {
+    box-shadow: 0 0 35px 10px rgba(0, 238, 255, 0.4);
+  }
+}
+
+.animate-borderPulse {
+  animation: borderPulse 4s ease-in-out infinite;
 }
